--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
     <script type="text/javascript" src="rp.js"></script>
 
     <title>Rock Paper Scissors Game</title>
+
+
+
 </head>
 <body>
-    
+    <div>
+        <button id="weapon" value="rock">Rock</button>
+        <button class="">Paper</button>
+        <button class="">Scissors</button>
+        
+        </div>
 </body>
 </html>
