--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="rp.js"></script>
+    <script type="text/javascript" src="rp.js" defer></script>
 
     <title>Rock Paper Scissors Game</title>
 
