--- a/index.html
+++ b/index.html
@@ -14,11 +14,22 @@
 
 </head>
 <body>
-    <div>
-        <button id="weapon" value="rock">Rock</button>
-        <button class="">Paper</button>
-        <button class="">Scissors</button>
+
+    <div id="scores">
+        <li id="playerscore">Playerscore: 0</li>
+        <li id="computerscore">Computerscore: 0</li>
+    </div>
+
+    <div id="butts">
+        <button class="weapon" value="Rock">Rock</button>
+        <button class="weapon" value="Paper">Paper</button>
+        <button class="weapon" value="Scissors">Scissors</button>
         
         </div>
+        <div id="results">
+
+            Choose to start
+        </div>
+        
 </body>
 </html>
